# T2V_HR

./: .gitignore  README.md  pyproject.toml
configs/: cache_wan_latents.yaml  cache_wan_latents_720_4k_1000.yaml  cache_wan_latents_720_4k_1000_nfs.yaml  cache_wan_latents_720_4k_pilot.yaml  cache_wan_latents_smoke.yaml  infer_hr_renoise_lora_v1.yaml  infer_lsrna_720_4k_1000.yaml  infer_lsrna_720_4k_1000_v3_full.yaml  infer_lsrna_720_4k_1000_v4_detail_temporal.yaml  infer_lsrna_720_4k_1000_v5_recurrent_detail.yaml  infer_lsrna_720_4k_pilot.yaml  infer_lsrna_smoke.yaml  infer_lsrna_wan13b.yaml  train_hr_renoise_lora_v1.yaml  train_hr_renoise_lora_v1_nfs.yaml  train_hr_renoise_lora_v1_nfs_nocoarse.yaml  train_hr_renoise_lora_v1_nfs_partial_prewarm.yaml  train_lsr_720_4k_1000.yaml  train_lsr_720_4k_pilot.yaml  train_lsr_smoke.yaml  train_lsr_wan13b.yaml  train_lsr_wan_smoke.yaml  train_lsrna_720_4k_1000_v2.yaml  train_lsrna_720_4k_1000_v3_full.yaml  train_lsrna_720_4k_1000_v4_detail_temporal.yaml  train_lsrna_720_4k_1000_v5_recurrent_detail.yaml  video_rna.yaml  video_rna_smoke.yaml
references/: experiment_plan.md  wan_sampler_hook.md
remote/: bootstrap_sagi.sh  check_720_4k_status.sh  check_hr_renoise_lora_training.sh  check_lsrna_v3_training.sh  check_lsrna_v4_training.sh  check_lsrna_v5_training.sh  copy_v5_checkpoint_to_scorpio.sh  eval_hr_renoise_lora_checkpoints.sh  eval_lsrna_v3_checkpoints.sh  eval_lsrna_v4_checkpoints.sh  eval_lsrna_v5_checkpoints.sh  launch_720_4k_full.sh  launch_720_4k_pilot.sh  launch_cache_720_4k_1000_scorpio_nfs.sh  launch_lsrna_v2_train.sh  (+19 more)
(+24 files in other folders)
